# hikari-arc

./: .editorconfig  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cron_requirements.txt  dev_requirements.txt  doc_requirements.txt  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  rest_requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
arc/: __init__.py  __main__.py  client.py  errors.py  events.py  extension.py  locale.py  plugin.py
arc/abc/: __init__.py  client.py  command.py  concurrency_limiting.py  error_handler.py  hookable.py  limiter.py  option.py  plugin.py
arc/command/: __init__.py  base.py  message.py  slash.py  user.py
arc/command/option/: __init__.py  attachment.py  base.py  bool.py  channel.py  float.py  int.py  mentionable.py  role.py  str.py  user.py
arc/command/option/custom/: __init__.py  color.py  emoji.py  member.py
arc/context/: __init__.py  autocomplete.py  base.py
arc/internal/: __init__.py  about.py  deprecation.py  options.py  sigparse.py  sync.py  types.py  version.py
arc/utils/: __init__.py  concurrency_limiter.py  hooks.py  loops.py  ratelimiter.py
arc/utils/hooks/: __init__.py  basic.py  limiters.py
docs/: README.md  changelog.md  getting_started.md  index.md
docs/api_reference/: client.md  context.md  errors.md  events.md  index.md  localization.md  plugin.md
docs/api_reference/abc/: client.md  command.md  concurrency_limiting.md  error_handler.md  hooks.md  index.md  limiter.md  option.md  plugin.md
docs/api_reference/command/: index.md  message.md  option.md  slash.md  user.md
docs/api_reference/utils/: concurrency_limiter.md  hooks.md  index.md  loops.md  ratelimiter.md
docs/api_reference/utils/hooks/: basic.md  limiters.md
docs/guides/: command_groups.md  concurrency_limiting.md  context_menu.md  dependency_injection.md  error_handling.md  events.md  foo.md  hikari_fundamentals.md  hooks.md  index.md  installation_contexts.md  interactions.md  loops.md  options.md  plugins_extensions.md  startup_shutdown.md  typing.md
docs/stylesheets/: additional_coloring.css
docs/tutorial/: index.md
examples/: README.md
examples/gateway/: basic.py  context_menu.py  custom_client.py  dependency_injection.py  error_handling.py  hooks.py  limiters.py  limiting_concurrency.py  localization.py  loops.py  options.py
examples/gateway/extension_example/: bot.py
examples/gateway/extension_example/extensions/: bar.py  foo.py
examples/rest/: basic.py  context_menu.py  custom_client.py  dependency_injection.py  error_handling.py  hooks.py  limiters.py  limiting_concurrency.py  localization.py  loops.py  options.py
examples/rest/extension_example/: bot.py
examples/rest/extension_example/extensions/: bar.py  foo.py
tests/: mock_client.py  test_client.py  test_command.py  test_context_command.py  test_di.py  test_inheritance.py  test_options.py  test_sigparse.py  test_slash.py
tests/test_extension/: extension.py  test_main.py
