[project]
name = "hikari-arc"
dynamic = ["version"]
description = "A command handler for hikari with a focus on type-safety and correctness."
readme = "README.md"
license = "MIT"
authors = [{ name = "hypergonial", email = "git@hypergonial.com" }]
maintainers = [{ name = "hypergonial", email = "git@hypergonial.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["alluka>=0.3.3,<0.4", "attrs>=25.3.0", "hikari>=2.2.0"]

[project.optional-dependencies]
cron = ["croniter==5.0.1", "types-croniter==5.0.1.20241205"]
rest = ["hikari[server]>=2.2.0"]

[dependency-groups]
dev = [
    "nox>=2025.2.9",
    "pyright>=1.1.397",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "slotscheck>=0.19",
    "typing-extensions>=4.12",
    "uv>=0.6",
    "colorama>=0.4.6; sys_platform == 'win32'",
]
docs = [
    "black>=25.1.0",
    "griffe-inherited-docstrings>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material[imaging]>=9.6.9",
    "mkdocstrings-python>=1.16.7",
]

[project.urls]
Homepage = "https://arc.hypergonial.com"
Documentation = "https://arc.hypergonial.com"
Repository = "https://github.com/hypergonial/hikari-arc"
Issues = "https://github.com/hypergonial/hikari-arc/issues"
Changelog = "https://arc.hypergonial.com/changelog/"

[tool.ruff]
exclude = ["examples", "docs", "build"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "TCH",
    "C",
    "N",
    "D2",
    "D3",
    "D415",
    "D417",
    "D418",
    "D419",
    "ASYNC",
    "Q",
    "RSE",
    "SIM",
    "RUF",
]
ignore = ["F405", "F403", "E501", "D205"]
fixable = ["I", "TCH", "D", "RUF"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.slotscheck]
strict-imports = true
require-superclass = false
require-subclass = true
exclude-classes = ":.*(Exception|Error|Proto|AutocompleteData)"

[tool.mypy]
ignore_errors = true

[tool.uv]
required-version = "~=0.6"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportMissingTypeStubs = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportUninitializedInstanceVariable = "error"
reportShadowedImports = "warning"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["arc"]
artifacts = ["pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.version]
path = "arc/internal/about.py"
pattern = '__version__: t\.Final\[str\] = \"(?P<version>[^\"]+)\"'

# FIXME: Remove this once hikari 2.2 is out
[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling>=1.14"]
build-backend = "hatchling.build"
